--- a/css/buttons.css
+++ b/css/buttons.css
@@ -53,11 +53,21 @@
     border-left: 2px solid;
     border-color: var(--buttonBorder);
     color: var(--textColor);
+    background-size: 0% 100%;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(90deg, #FFBD5E, #F9F871);
+    animation: backgroundSlideOut 300ms ease forwards;
+}
+
+.button > div:hover {
+    outline: none;
+    animation: backgroundSlideIn 300ms ease forwards;
 }
 
 .button:nth-child(n + 4) > div {
     border-left: none;
     width: 100%;
+    background-image: var(--gradient);
 }
 
 /*  =================
@@ -81,5 +91,24 @@
 
     .button:nth-child(n + 4) {
         margin-bottom: 10px;
+    }
+}
+
+/*  ==========
+    Animations
+    ==========  */
+
+@keyframes backgroundSlideIn {
+    to {
+        background-size: 100% 100%;
+    }
+}
+
+@keyframes backgroundSlideOut {
+    from {
+        background-size: 100% 100%;
+    }
+    to {
+        background-size: 0% 100%;
     }
 }
