--- a/css/buttons.css
+++ b/css/buttons.css
@@ -12,6 +12,7 @@
     ===================  */
 
 .button {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,8 +21,33 @@
     margin: 0 auto;
     border: 3px solid;
     font-size: 150%;
-    border-color: var(--buttonBorder);
+    border-image-slice: 1;
+    border-image-source: var(--gradient);
     background-color: var(--buttonBackground);
+}
+
+.button:before {
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    right: -3px;
+    bottom: -3px;
+    content: '';
+    border: 3px solid;
+    border-color: var(--buttonBorder);
+    opacity: 1;
+    transition: opacity 300ms;
+}
+
+.button:hover:before,
+.button:active:before {
+    pointer-events: none;
+    opacity: 0;
+}
+
+.button:nth-child(n+4):hover:before,
+.button:nth-child(n+4):active:before{
+    opacity: 1;
 }
 
 /*  ====================
@@ -55,7 +81,7 @@
     color: var(--textColor);
     background-size: 0% 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(90deg, #FFBD5E, #F9F871);
+    background-image: linear-gradient(90deg, #FF856F, #FFBD5E, #F9F871);
     animation: backgroundSlideOut 300ms ease forwards;
 }
 
